--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
+    <title> Branch Web SDK </title>
   </head>
   <body>
-    
+    <h1> Bell Canada Web SDK Test</h1>
+    <h3> Let's test reading link data</h3>
   </body>
 </html>
