--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <body>
     <h1> Bell Canada Web SDK Test</h1>
     <h3> Let's test reading link data</h3>
+    <a class="btn-large btn-info btn"> test button </a>
   </body>
 </html>
