--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     // init Branch
   branch.init('key_live_nb3Xs0qSzqLN0SQPSOrHBhnorudpSBMu');
  </script>
-
+<link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1> Bell Canada Web SDK Test</h1>
