--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <body>
     <h1> Bell Canada Web SDK Test</h1>
     <h3> Let's test reading link data</h3>
-    <a class="btn-large btn-info btn"> test button </a>
+    <div class="container">
+      
+    </div>
   </body>
 </html>
