--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <h1> Bell Canada Web SDK Test</h1>
     <h3> Let's test reading link data</h3>
     <div class="container">
-      
+      <button type="submit" class="btn">
+        Read Branch Link Data
+      </button>
     </div>
   </body>
 </html>
