--- a/index.html
+++ b/index.html
@@ -12,14 +12,25 @@
     <h1> Bell Canada Web SDK Test</h1>
     <h3> Let's test reading link data</h3>
     <div class="container">
-      <button type="submit" class="btn">
+      <button type="submit" class="btn" onclick="openPopup()">
         Read Branch Link Data
       </button>
-      <div class="popup">
+      <div class="popup" id="popup">
         <h2> Thank you! </h2>
         <p> Your details have been successfuly submited</p>
-        <button type="button"> OK </button>
+        <button type="button" onclick="closePopup()"> OK </button>
       </div>
     </div>
+    <script>
+      let popup = document.getElementById("popup");
+
+      function openPopup() {
+        popup.classList.add("open-popup");
+      }
+        function closePopup() {
+        popup.classList.remove("open-popup");
+      }
+      
+    </script>
   </body>
 </html>
