--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <title> Branch Web SDK </title>
      <script>   (function(b,r,a,n,c,h,_,s,d,k){if(!b[n]||!b[n]._q){for(;s<_.length;)c(h,_[s++]);d=r.createElement(a);d.async=1;d.src="https://cdn.branch.io/branch-latest.min.js";k=r.getElementsByTagName(a)[0];k.parentNode.insertBefore(d,k);b[n]=h}})(window,document,"script","branch",function(b,r){b[r]=function(){b._q.push([r,arguments])}},{_q:[],_v:1},"addListener banner closeBanner closeJourney data deepview deepviewCta first init link logout removeListener setBranchViewData setIdentity track trackCommerceEvent logEvent disableTracking getBrowserFingerprintId crossPlatformIds lastAttributedTouchData setAPIResponseCallback qrCode setRequestMetaData setAPIUrl getAPIUrl setDMAParamsForEEA".split(" "), 0);
     // init Branch
-  branch.init('key_live_nb3Xs0qSzqLN0SQPSOrHBhnorudpSBMu');
+  branch.init('key_live_nb3Xs0qSzqLN0SQPSOrHBhnorudpSBMu', function(err, data) {
+	console.log(err, data);
+});
+branch.getBrowserFingerprintId(function(err, data) { console.log(data); });
+// To read latest data, call `data()` method
+branch.data(function(err, data) {
+  console.log(err, data);
+});
  </script>
 <link rel="stylesheet" href="style.css">
   </head>
